@@ -92,6 +92,9 @@ glibc (2.21-0experimental1) UNRELEASED; urgency=medium
     It was removed in commit 92963737c4376bcfd65235d5c325fa7f48302f89
     (Closes: #781245).
 
+  [ Matthias Klose ]
+  * Fix multilib enabled stage1 cross builds (closes: #766877).
+
  -- Samuel Thibault <sthibault@debian.org>  Fri, 20 Mar 2015 12:30:54 +0000
 
 glibc (2.21-0experimental0) experimental; urgency=medium
